scripts/30-network/nodelocaldns.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodelocaldns
  namespace: kube-system
  labels:
    k8s-app: nodelocaldns
spec:
  clusterIP: None
  ports:
    - name: dns
      port: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      protocol: TCP
  selector:
    k8s-app: nodelocaldns
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nodelocaldns
  namespace: kube-system
  labels:
    k8s-app: nodelocaldns
spec:
  selector:
    matchLabels:
      k8s-app: nodelocaldns
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 10%
    type: RollingUpdate
  template:
    metadata:
      labels:
        k8s-app: nodelocaldns
    spec:
      priorityClassName: system-node-critical
      serviceAccountName: nodelocaldns
      hostNetwork: true
      dnsPolicy: Default
      tolerations:
        - operator: Exists
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: node-cache
          image: harbor.wuxing.local/dns/k8s-dns-node-cache:1.26.7
          resources:
            requests:
              cpu: 25m
              memory: 5Mi
          args:
            - -localip=169.254.25.10
            - -conf=/etc/Corefile
            - -upstreamsvc=kube-dns
          securityContext:
            privileged: true
          ports:
            - containerPort: 53
              name: dns
              protocol: UDP
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 9253
              name: metrics
              protocol: TCP
          livenessProbe:
            httpGet:
              host: 169.254.25.10
              path: /health
              port: 9254
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: config-volume
              mountPath: /etc/Corefile
              subPath: Corefile
            - name: xtables-lock
              mountPath: /run/xtables.lock
              readOnly: false
      volumes:
        - name: config-volume
          configMap:
            name: nodelocaldns
            items:
              - key: Corefile
                path: Corefile
        - name: xtables-lock
          hostPath:
            path: /run/xtables.lock
            type: FileOrCreate
