scripts/30-network/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: gateway
spec:
  parentRefs:
  - name: monitoring-gateway
    sectionName: https
  hostnames:
  - argocd.wuxing.local
  rules:
  - backendRefs:
    - name: argocd-server
      namespace: argocd
      port: 80
      kind: Service
